--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.12.1",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
+    "react-player": "^2.13.0",
+    "react-responsive-carousel": "^3.2.23",
+    "typescript": "5.0.4",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/video-react": "^0.15.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "sass": "^1.69.5",
