--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
@@ -24,13 +25,15 @@
     "eslint-config-next": "13.4.2",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
-    "next": "^14.0.5-canary.7",
+    "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
     "react-player": "^2.13.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-use-cart": "^1.13.0",
     "typescript": "5.0.4",
     "video-react": "^0.16.0",
     "zod": "^3.22.4"
