--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
@@ -19,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
+    "cart": "^1.1.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eslint": "8.40.0",
@@ -26,22 +26,17 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "^14.0.4",
-    "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
-    "react-player": "^2.13.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-use-cart": "^1.13.0",
     "typescript": "5.0.4",
-    "video-react": "^0.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react-image-gallery": "^1.2.4",
-    "@types/video-react": "^0.15.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "sass": "^1.69.5",
