--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^7.6.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@types/node": "20.1.7",
@@ -19,14 +20,17 @@
     "antd": "^5.12.1",
     "axios": "^1.6.2",
     "cart": "^1.1.2",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "faker": "^6.6.6",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
