--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^7.6.0",
@@ -23,10 +25,12 @@
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "draft-js": "^0.11.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "faker": "^6.6.6",
     "js-cookie": "^3.0.5",
+    "markdown-it": "^14.0.0",
     "moment": "^2.29.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -34,12 +38,15 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-responsive-carousel": "^3.2.23",
     "typescript": "5.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.16",
     "@types/js-cookie": "^3.0.6",
+    "@types/markdown-it": "^13.0.7",
     "@types/react-image-gallery": "^1.2.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
